tests/ui/ser-enum-generic.stderr
error: Enums with generics are not supported
 --> tests/ui/ser-enum-generic.rs:3:10
  |
3 | #[derive(Serialize)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
