tests/ui/ser-enum-generic.rs
use miniserde::Serialize;

#[derive(Serialize)]
enum Enum<const T: i32> {
    Variant,
}

fn main() {}
